[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Menu/StartButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/OpenSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_filter = true
extra_spacing_space = 5
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.243137 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerReady/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.945098, 0.262745, 0.262745, 0.290196 ), Color( 0.00784314, 0.203922, 0.435294, 0.729412 ), Color( 0.52549, 0.396078, 0.0470588, 0.776471 ), Color( 0.196078, 0.478431, 0.00392157, 0.407843 ), Color( 1, 1, 1, 1 ), Color( 0.945098, 0.262745, 0.262745, 0.756863 ), Color( 0.00784314, 0.203922, 0.435294, 0.290196 ), Color( 0.52549, 0.396078, 0.0470588, 0.501961 ), Color( 0.196078, 0.478431, 0.00392157, 0.788235 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StartButton" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerReady" type="Node2D" parent="."]

[node name="ReadyText" type="Label" parent="PlayerReady"]
margin_left = -101.527
margin_top = 36.2569
margin_right = 94.4726
margin_bottom = 105.257
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.984314, 0.984314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 8
text = "P1 Listo!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="PlayerReady"]
position = Vector2( 0, -82.3286 )
scale = Vector2( 2, 3 )
texture = ExtResource( 2 )

[node name="ReferenceRect" type="ReferenceRect" parent="PlayerReady"]
margin_left = -63.0
margin_top = -179.0
margin_right = 63.0
margin_bottom = 16.0
border_color = Color( 0.858824, 0.180392, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -178.678
margin_top = -33.0432
margin_right = 180.322
margin_bottom = 35.9568
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "TEXTO PRUEBA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="."]
anims/binding_label = SubResource( 3 )
anims/selected = SubResource( 4 )
